<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="achievement_message">Προκειμένου να δεις τη λίστα των επιτευγμάτων θα πρέπει να συνδεθείς με το λογαριασμό σου στο Google+. Θέλεις να συνδεθείς τώρα;</string>
    <string name="answer1">I am sure it is</string>
    <string name="answer10">"I am not sure but I think it's"</string>
    <string name="answer11">"By the Beard of Zeus! I don't know it!"</string>
    <string name="answer12">This is a difficult question even for me, Archimedes!</string>
    <string name="answer13">"I think it's either A or C."</string>
    <string name="answer14">"I think it's either B or C."</string>
    <string name="answer15">"I think it's either C or D."</string>
    <string name="answer16">"I think it's either A or B."</string>
    <string name="answer17">"I think it's either A or"</string>
    <string name="answer18">Oh my Gods! I have no idea!</string>
    <string name="answer19">"It think, 60% it's"</string>
    <string name="answer2">"It's"</string>
    <string name="answer20">This is a very difficult question. I have to look into it.</string>
    <string name="answer21">"I am sorry. I can't help you."</string>
    <string name="answer22">"Between the two options, I think it's"</string>
    <string name="answer23">"It's either D or"</string>
    <string name="answer24">"I think it's either C or"</string>
    <string name="answer25">"I think it's either A or D."</string>
    <string name="answer26">"I think it's either B or"</string>
    <string name="answer3">"I think it's"</string>
    <string name="answer4">I think, 99% is</string>
    <string name="answer5">There is no doubt that the correct answer is</string>
    <string name="answer6">"Don't even think! It's"</string>
    <string name="answer7">"I know it! It's"</string>
    <string name="answer8">"Eureka! It's"</string>
    <string name="answer9">"Of course it's"</string>
    <string name="answered">Answered:</string>
    <string name="app_name">Eureka!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="awarded">Great! You have been awarded with a Joker!</string>
    <string name="categoriesselected">out of 6 categories selected</string>
    <string name="congrats">Congratulations!</string>
    <string name="contact_email">Contact email:</string>
    <string name="development">Development:</string>
    <string name="device_language">en</string>
    <string name="dontbother">Not now</string>
    <string name="feedback">Thank you for rating us. Do you want to send us an email for how to improve the game experience?</string>
    <string name="gameover">Game Over</string>
    <string name="good_score">Nice! This is a very good score!</string>
    <string name="graphics">Graphic Designer:</string>
    <string name="help_archimedes">Help from Archimedes</string>
    <string name="hint">Name...</string>
    <string name="later">Later</string>
    <string name="leaving_message">If you leave the game now you will get no points from this question and the category will be locked.</string>
    <string name="letter_a">A</string>
    <string name="letter_b">B</string>
    <string name="letter_c">C</string>
    <string name="letter_d">D</string>
    <string name="log_in">Log In</string>
    <string name="log_in_message">In order to sumbit your score to the Online List you must sign in with your Google+ account. Do you want to sign in now?</string>
    <string name="moregames">More Games</string>
    <string name="music_credits">Music Credits:</string>
    <string name="musicdisabled">The music has been disabled.</string>
    <string name="musicenabled">The music has been enabled.</string>
    <string name="new_highscore">Great! This is a new high score:</string>
    <string name="newgamemessage1">We have developed a new fun quiz game: Quiz of Knowledge. Do you want to download it now for free?</string>
    <string name="newgamemessage2">We have developed a new fun quiz game: The Incredible Physics Experiments. Do you want to download it now for free?</string>
    <string name="newgametitle1">New Game: Quiz of Knowledge</string>
    <string name="newgametitle2">New Game: Physics Experiments</string>
    <string name="no">No</string>
    <string name="noname">Noname</string>
    <string name="not_now">Not now</string>
    <string name="ok">OK</string>
    <string name="online_message">In order to visit the Online List you must sign in with your Google+ account. Do you want to sign in now?</string>
    <string name="please_wait">Please wait...</string>
    <string name="question_loading">The question is loading ...</string>
    <string name="rate">Rate</string>
    <string name="ratemessage">How much do you like our game?</string>
    <string name="ratetext">Thank you for rating us. We are pleased that you like it. Please rate us in PlayStore so we can keep bringing you great updates.</string>
    <string name="rateus">Rate our game</string>
    <string name="score_is">Your score is:</string>
    <string name="score_submitted">Your score has been submitted successfully!</string>
    <string name="second">200</string>
    <string name="selectsix">Select 6 categories to start</string>
    <string name="soundsdisabled">The sound effects have been disabled.</string>
    <string name="soundsenabled">The sound effects have been enabled.</string>
    <string name="title">Eureka!</string>
    <string name="version">Game Version:</string>
    <string name="video_text">Do you want to watch a short video ad and gain a hint?</string>
    <string name="video_title">Do you want a hint?</string>
    <string name="yes">Yes</string>
    <string name="highscore">Best Scores</string>
    <string name="score">Score</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="quickgame">Quick Game</string>
    <string name="ga_trackingId">UA-8470383-2</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="achievement_10000_points">CgkI2YeKo5sKEAIQCA</string>
    <string name="achievement_1000_games">CgkI2YeKo5sKEAIQBQ</string>
    <string name="achievement_100_games">CgkI2YeKo5sKEAIQAw</string>
    <string name="achievement_10_games">CgkI2YeKo5sKEAIQAg</string>
    <string name="achievement_5000_points">CgkI2YeKo5sKEAIQBg</string>
    <string name="achievement_500_games">CgkI2YeKo5sKEAIQBA</string>
    <string name="achievement_7500_points">CgkI2YeKo5sKEAIQBw</string>
    <string name="achievement_archimedes">CgkI2YeKo5sKEAIQDw</string>
    <string name="achievement_art_expert">CgkI2YeKo5sKEAIQFA</string>
    <string name="achievement_art_genius">CgkI2YeKo5sKEAIQFQ</string>
    <string name="achievement_art_teacher">CgkI2YeKo5sKEAIQEw</string>
    <string name="achievement_athletics_expert">CgkI2YeKo5sKEAIQIw</string>
    <string name="achievement_athletics_genius">CgkI2YeKo5sKEAIQJA</string>
    <string name="achievement_athletics_teacher">CgkI2YeKo5sKEAIQIg</string>
    <string name="achievement_entertainment_expert">CgkI2YeKo5sKEAIQIA</string>
    <string name="fifth">500</string>
    <string name="first">100</string>
    <string name="forth">400</string>
    <string name="third">300</string>
</resources>