<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/main_layout" android:background="@drawable/bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="7.6"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="7.2" android:layout_alignParentTop="true">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/ads" android:layout_width="fill_parent" android:layout_height="0.0dip" android:weightSum="6.0" android:layout_weight="1.3">
            <LinearLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="4.5">
                <com.google.android.gms.ads.AdView android:layout_gravity="center" android:id="@id/adView" android:layout_width="fill_parent" android:layout_height="wrap_content" ads:adSize="BANNER" ads:adUnitId="ca-app-pub-3681432414784125/5038352041" xmlns:ads="http://schemas.android.com/apk/res-auto" />
            </LinearLayout>
            <TextView android:textSize="21.0sp" android:textColor="@color/White" android:id="@id/score" android:background="@drawable/score" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="0" android:layout_weight="1.5" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:id="@id/categories" android:layout_width="fill_parent" android:layout_height="0.0dip" android:weightSum="6.0" android:layout_weight="1.3">
            <com.educ8s.eureka2017.AutoResizeTextView android:textSize="12.0sp" android:layout_gravity="center" android:id="@id/cat1" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="Προσωπικότητες" android:layout_weight="1.0" style="@style/CategoryTextView" />
            <com.educ8s.eureka2017.AutoResizeTextView android:textSize="12.0sp" android:id="@id/cat2" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/fifth" android:layout_weight="1.0" style="@style/CategoryTextView" />
            <com.educ8s.eureka2017.AutoResizeTextView android:textSize="12.0sp" android:id="@id/cat3" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/fifth" android:layout_weight="1.0" style="@style/CategoryTextView" />
            <com.educ8s.eureka2017.AutoResizeTextView android:textSize="12.0sp" android:id="@id/cat4" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/fifth" android:layout_weight="1.0" style="@style/CategoryTextView" />
            <com.educ8s.eureka2017.AutoResizeTextView android:textSize="12.0sp" android:id="@id/cat5" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="Τεχνολογία" android:layout_weight="1.0" style="@style/CategoryTextView" />
            <com.educ8s.eureka2017.AutoResizeTextView android:textSize="12.0sp" android:id="@id/cat6" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/fifth" android:layout_weight="1.0" style="@style/CategoryTextView" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/linearLayoutSeperator" android:background="@drawable/category_seperator" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.1" />
        <LinearLayout android:id="@id/row5" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.9">
            <Button android:id="@id/buttone1" android:background="@drawable/blue" android:clickable="false" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/fifth" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttone2" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/fifth" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttone3" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/fifth" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttone4" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/fifth" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttone5" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/fifth" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttone6" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/fifth" android:layout_weight="1.0" android:onClick="Clicked" />
        </LinearLayout>
        <LinearLayout android:id="@id/row4" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.9">
            <Button android:id="@id/buttond1" android:background="@drawable/blue" android:clickable="false" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/forth" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttond2" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/forth" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttond3" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/forth" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttond4" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/forth" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttond5" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/forth" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttond6" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/forth" android:layout_weight="1.0" android:onClick="Clicked" />
        </LinearLayout>
        <LinearLayout android:id="@id/row3" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.9">
            <Button android:id="@id/buttonc1" android:background="@drawable/blue" android:clickable="false" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/third" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttonc2" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/third" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttonc3" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/third" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttonc4" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/third" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttonc5" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/third" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttonc6" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/third" android:layout_weight="1.0" android:onClick="Clicked" />
        </LinearLayout>
        <LinearLayout android:id="@id/row2" android:layout_width="fill_parent" android:layout_height="0.0dip" android:weightSum="6.0" android:layout_weight="0.9">
            <Button android:id="@id/buttonb1" android:background="@drawable/blue" android:clickable="false" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/second" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttonb2" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/second" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttonb3" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/second" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttonb4" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/second" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttonb5" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/second" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/buttonb6" android:background="@drawable/blue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/second" android:layout_weight="1.0" android:onClick="Clicked" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/row1" android:layout_width="fill_parent" android:layout_height="0.0dip" android:weightSum="6.0" android:layout_weight="0.9">
            <Button android:id="@id/button1" android:background="@drawable/blue" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/first" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/button2" android:background="@drawable/blue" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/first" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/button3" android:background="@drawable/blue" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/first" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/button4" android:background="@drawable/blue" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/first" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/button5" android:background="@drawable/blue" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/first" android:layout_weight="1.0" android:onClick="Clicked" />
            <Button android:id="@id/button6" android:background="@drawable/blue" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="1.0dip" android:text="@string/first" android:layout_weight="1.0" android:onClick="Clicked" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>